<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraPreviewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageButton
        android:id="@+id/captureImageButton"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:src="@drawable/camera"
        android:elevation="15dp"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/capture_image"
        app:tint="@color/white"/>

    <ImageButton
        android:id="@+id/flasherButton"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/flasher_on"
        android:elevation="15dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/flasher_button"
        app:tint="@color/white"/>

    <ImageButton
        android:id="@+id/flipCameraButton"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/flasherButton"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="25dp"
        android:elevation="15dp"
        android:src="@drawable/flip_camera"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/flip_camera"
        app:tint="@color/white"/>

</RelativeLayout>